# NexDynSDF

./: .gitignore  .gitmodules  CMakeLists.txt  Gear_I.eng  README.md  vcpkg.json
demos/: create_obtuse_model.py  extract_junction_nsm.py  extract_two_faces_nsm.py  generate_benchmark_nsm_suite.py  generate_box_nsm.py  generate_cone_nsm.py  generate_cube_nsm.py  generate_sphere_nsm.py
documents/: Triangle_Influence_Supersets_CGF2023_zh.md
examples/: test_mesh_binary_loader.cpp
figures/fig1/: fig1.py
include/sdflib/: ExactOctreeSdf.h  HybridOctreeSdf.h  InterpolationMethods.h  NagataTriangleMeshDistance.h  NagataTrianglesInfluenceForBuild.h  OctreeSdf.h  OctreeSdfBreadthFirst.h  SdfFunction.h  TrianglesInfluence.h
include/sdflib/utils/: BoundingBox.h  GJK.h  GJK.inl  InterpolationMethods.h  Mesh.h  MeshBinaryLoader.h  NagataEnhanced.h  NagataPatch.h  Timer.h  TriangleUtils.h  UsefullSerializations.h  WindingNumberOracle.h
models/nsm/: Gear_I.eng  Gear_I.nsm  Gear_II.eng  Gear_II.nsm  Gear_I_cpp.eng
pytools/: README.md  analytic_bench_eval.py  check_nagata_cracks.py  check_raw_nans.py  nagata_exporter.py  nagata_patch.py  nsm_reader.py  paper1_exp123_pipeline.py  paper1_rmse_pipeline.py  query_nsm_point.py  render_model_images.py  validate_nagata.py  visualize_nagata.py  visualize_nagata_html.py  visualize_obj_nagata.py  visualize_sdf.py  visualize_sdf_pyvista.py  visualize_sdf_pyvista_offscreen.py
src/: ExactOctreeSdf.cpp  OctreeSdf.cpp  SdfFunction.cpp  main.cpp
src/utils/: GJK.cpp  Mesh.cpp  NagataEnhanced.cpp  NagataPatch.cpp  Timer.cpp  TriangleUtils.cpp  WindingNumberOracle.cpp
tests/: test_all.cpp  test_cereal.cpp  test_eigen.cpp  test_enoki.cpp  test_fcpw.cpp  test_glm.cpp  test_hybrid_accuracy.cpp  test_icg.cpp  test_nagata.cpp  test_nagata_enhanced.cpp  test_openmp.cpp  test_spdlog.cpp
tools/: run_paper1_exp123.ps1  run_paper1_rmse.ps1
tools/EngExporter/: main.cpp
tools/NagataExporter/: main.cpp
tools/SdfExporter/: main.cpp
tools/SdfSampler/: main.cpp
